<resources>
    <string name="app_name">Game of Scenarios</string>
    <string name="ethnicity">Ethnicity</string>
    <string name="age">Age</string>
    <string name="gender">Gender</string>
    <string name="optional">Optional</string>
    <string name="password">Password</string>
    <string name="old_password">Old Password</string>
    <string name="new_password">New Password</string>
    <string name="passwordHint">Password (min. 6 char)</string>
    <string name="register">Register</string>
    <string name="username">Username</string>
    <string name="display_name">Display Name</string>
    <string name="email">Email</string>
    <string name="play">Play</string>
    <string name="rules_and_info">Rules/Info</string>
    <string name="rules">Rules</string>
    <string name="profile">Profile</string>
    <string name="statistics">Statistics</string>
    <string name="game_of_scenarios">GAME OF SCENARIOS</string>
    <string name="ready">Ready</string>
    <string name="reroll">Reroll</string>
    <string name="prisoners">Prisoner\'s Dilemma</string>
    <string name="login">Login</string>
    <string name="anonymously">Play Anonymously</string>
    <string name="rewardPoints">Points</string>
    <string name="wins">Wins</string>
    <string name="draws">Draws</string>
    <string name="losses">Losses</string>
    <string name="total_games">Total Games</string>
    <string name="scenario_profile">Your Game Statistics</string>
    <string name="update">Update Profile</string>
    <string name="sign_out">Sign Out</string>
    <string name="register_now">Register Now</string>
    <string name="sign_in">Sign In</string>
    <string name="reroll_phase">Reroll Phase</string>

    <string-array name="gender">
        <item>Select Option..</item>
        <item>Male</item>
        <item>Female</item>
        <item>Other</item>
    </string-array>

    <string-array name="ethnicity">
        <item>Select Option..</item>
        <item>American Indian or Alaska Native</item>
        <item>Asian</item>
        <item>Black or African American</item>
        <item>Decline to State</item>
        <item>Hispanic or Latino</item>
        <item>Other</item>
        <item>Native Hawaiian or Other Pacific Islander</item>
        <item>White</item>
    </string-array>

    <string-array name="age">
        <item>Select Option..</item>
        <item>Below 18</item>
        <item>18–24</item>
        <item>25–34</item>
        <item>35–44</item>
        <item>45–54</item>
        <item>65 or more</item>
    </string-array>

    <string-array name="scenarios">
        <item>Prisoner\'s Dilemma</item>
        <item>Game of Chicken</item>
        <item>Traveler\'s Dilemma</item>
    </string-array>

    <string-array name="rooms">
        <item>Room_1</item>
        <item>Room_2</item>
        <item>Room_3</item>
        <item>Room_4</item>
        <item>Room_5</item>
    </string-array>

    <string name="title_activity_game_finish">GameFinishActivity</string>
    <string name="lockIn">Lock In</string>
    <string name="betray">BETRAY</string>
    <string name="keepQuiet">KEEP QUIET</string>
    <string name="playAgain">Play Again?</string>
    <string name="mainMenu">Main Menu</string>
    <string name="stayCenter">STAY THE COURSE</string>
    <string name="swerveLeft">SWERVE LEFT</string>
    <string name="swerveRight">SWERVE RIGHT</string>
    <string name="drawer_open">Open navigation drawer</string>
    <string name="drawer_close">Close navigation drawer</string>

    <string name="prisonersConciseRules">You and an accomplice are arrested. You are each given the chance to betray your partner. \n\nIf you both keep quiet, your sentence will be only 1 year. If you betray your partner, you\'ll go free while they receive a 25 year sentence. If you both betray each other, you\'ll both receive a 10 year sentence.</string>
    <string name="travelersConciseRules">You and a fellow passenger have lost your suitcases which happen to be identical. The airline is liable for up to $100 per suitcase. You must provide a value for your suitcase. \n\nIf your partner chooses the same value, then that is what the airline will honor. Otherwise, the lower amount will be paid. The one who provides the lower amount will receive a bonus from the airline equal to $2 plus half the difference.</string>
    <string name="chickenConciseRules">You and your opponent are driving at each other on a single lane road at high speed. \n\nIf you stay the course and force your opponent to swerve, you win. Crashing is even worse than swerving though!</string>

    <string name="prisonersRules">After committing a crime, you and an accomplice are arrested and taken to jail. The police take you and your accomplice into separate rooms and offer each of you deals in exchange for evidence to convict the other. \n\nIf you and your accomplice stay quiet and do not cooperate with the police, you will both spend only 1 year in prison due to lack of sufficient evidence. If one criminal betrays their partner while their partner stays quiet,  the criminal who has been betrayed will get 25 years in prison and the traitor will go free. If both you and your accomplice betray each other to the police, you will both get 10 years in prison."</string>
    <string name="travelersRules">You and a fellow traveler have lost your identical suitcases which have identical contents. The airline is liable for a maximum of $100 per suitcase. You have no communication with the other traveler. You each must value your suitcases between $2 and $100. \n\n If you choose the same value, then that is what the airline will honor. If you provide different values, then the lower of the two will be paid. The traveler who gave the lower value will be awarded a bonus equal to $2 plus half the difference between the values.</string>
    <string name="chickenRules">You are driving down a single lane road at high speed. Your opponent is driving down the same road in the opposing direction. Either player can swerve or continue driving down the road at full speed. \n\nIf you continue driving while your opponent swerves off of the road, you win and shout \"chicken!\" as you speed past him. If neither player swerves, both players crash and sustain severe injury. Which will you choose?</string>

    <string name="aboutGameTheory">Game of Scenarios was inspired by the science of Game Theory. Game Theory studies systems in which intelligent and rational players make decisions. Game Theory concepts are mostly presented in the format of \“Games.\” By setting up a hypothetical game with a specific ruleset, Game Theorists have been able to make discoveries which have advanced a variety disciplines including political science, economics, computer science, and logic. The most iconic of these games include such games as the Prisoner\’s Dilemma and Chicken.</string>
    <string name="aboutNash">John Nash \(June 13, 1928 \– May 23, 2015\) was an American mathematician who made major contributions to Game Theory. One of his biggest contributions to Game Theory was the concept of the Nash Equilibrium. The Nash Equilibrium is a state in a multiplayer, non\-cooperative game, in which no player will get a better outcome by changing his own strategy. Nash was awarded the Nobel Prize in Economic Sciences in 1994 for his work on the Nash Equilibrium.</string>
    <string name="aboutPareto">Vilfredo Pareto \(July 15, 1848 \– August 19, 1923\) was an Italian engineer, sociologist, political scientist, and philosopher. Though Pareto did not live to see the birth of Game Theory, his conception of Pareto\-Optimality ended up having a major impact on Game Theory nonetheless. Pareto optimality is a state of in which it is impossible to achieve an outcome so as to make any one player better off without making at least one other player worse off. Pareto\-Optimality can be applied to many Game Theory games for the purposes of bringing about favorable outcomes.</string>

    <string name="buttonInfo">About Game Theory</string>
    <string name="buttonNash">About Nash</string>
    <string name="buttonPareto">About Pareto</string>
    <string name="buttonPrisonerRules">Prisoners\' Dilemma Rules</string>
    <string name="buttonChickenRules">Chicken Rules</string>
    <string name="buttonTravelerRules">Travelers\' Dilemma Rules</string>


    <string name="yourChoice">Your choice: %1$s</string>
    <string name="opponentChoice">Opponent\'s choice: %1$s</string>
    <string name="yourPrice">Your price: %1$d</string>
    <string name="opponentPrice">Opponent\'s price: %1$d</string>
    <string name="rewards">Points: </string>
    <string name="newRewards"> + %1$d</string>



</resources>
