<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_rules"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.memeinnovations.gameofscenarios.activities.RulesActivity">

    <android.support.constraint.Guideline
        android:id="@+id/glTopMainMenu"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.16" />

    <android.support.constraint.Guideline
        android:id="@+id/glLeftRulesInner"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.15" />

    <android.support.constraint.Guideline
        android:id="@+id/glRightRulesInner"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.85" />

    <Button
        android:id="@+id/buttonPrisonerRules"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:onClick="prisonerRules"
        android:text="@string/buttonPrisonerRules"
        app:layout_constraintEnd_toEndOf="@+id/buttonTravelerRules"
        app:layout_constraintStart_toStartOf="@+id/buttonTravelerRules"
        app:layout_constraintTop_toBottomOf="@+id/buttonTravelerRules" />

    <Button
        android:id="@+id/buttonChickenRules"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:onClick="chickenRules"
        android:text="@string/buttonChickenRules"
        app:layout_constraintEnd_toStartOf="@+id/glRightRulesInner"
        app:layout_constraintStart_toStartOf="@+id/glLeftRulesInner"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/buttonTravelerRules"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:onClick="travelerRules"
        android:text="@string/buttonTravelerRules"
        app:layout_constraintEnd_toEndOf="@+id/buttonChickenRules"
        app:layout_constraintStart_toStartOf="@+id/buttonChickenRules"
        app:layout_constraintTop_toBottomOf="@+id/buttonChickenRules" />



</android.support.constraint.ConstraintLayout>
